--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "dotenv": "^16.4.5",
     "eslint": "^9.1.1",
     "express": "^4.19.2",
+    "joi": "^17.13.0",
     "nodemon": "^3.1.0",
     "pg": "^8.11.5"
   }
